# MYLLMAPP

./: README.md  gradle.properties
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama.h  native-lib.cpp
app/src/main/cpp/includes/common/: build-info.cpp
app/src/main/java/com/example/myapplication/: AlarmReceiver.kt  ExcelUtils.kt  HistoryActivity.kt  LoginActivity.kt  MainActivity.kt  NoteUtil.kt  SignOutActivity.kt  SignupActivity.kt  SplashActivity.kt  Untitled-1.txt  UserDatabase.kt  WelcomeActivity.kt
app/src/main/res/anim/: history_item_animation.xml  history_layout_animation.xml  login_item_animation.xml  login_layout_animation.xml
app/src/main/res/drawable/: black_gradient_background.xml  button_background_selector.xml  chat_bubble.xml  chat_bubble_background.xml  chat_bubble_user.xml  edit_text_border.xml  ic_notification.xml  ic_user_placeholder.xml  input_box_background.xml  item_chat_message.xml  nav_header_background.xml
app/src/main/res/font/: montserrat.xml
app/src/main/res/layout/: activity_history.xml  activity_login.xml  activity_main.xml  activity_sign_out.xml  activity_signup.xml  activity_splash.xml  activity_welcome.xml  chat_message_item.xml  history_item.xml  item_conversation.xml  nav_header.xml
app/src/main/res/menu/: nav_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/xml/: file_provider_paths.xml  text_input_border_selector.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
